@@ -9,15 +9,12 @@ import com.debtgo.debtgo_backend.dto.ConsultantServiceDto;
 import com.debtgo.debtgo_backend.dto.ConsultantSummaryDto;
 
 import com.debtgo.debtgo_backend.domain.Consultant;
-import com.debtgo.debtgo_backend.domain.ConsultantServiceEntity;
 import com.debtgo.debtgo_backend.domain.ConsultantRequest;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,33 +24,12 @@ public class ConsultantAppService {
         private final ConsultantServiceRepository consultantServiceRepository;
         private final ConsultantRequestRepository requestRepo;
 
-        // ============================================================
-        // PERFIL
-        // ============================================================
         public ConsultantDto getConsultant(Long id) {
                 Consultant c = consultantRepository.findById(id)
                                 .orElseThrow(() -> new RuntimeException("Consultor no encontrado"));
                 return map(c);
         }
 
-        public ConsultantDto updateConsultant(Long id, ConsultantDto dto) {
-                Consultant c = consultantRepository.findById(id)
-                                .orElseThrow(() -> new RuntimeException("Consultor no encontrado"));
-
-                c.setFullName(dto.getFullName());
-                c.setSpecialty(dto.getSpecialty());
-                c.setExperience(dto.getExperience());
-                c.setDescription(dto.getDescription());
-                c.setHourlyRate(dto.getHourlyRate());
-                c.setProfileImage(dto.getProfileImage());
-                c.setRating(dto.getRating());
-
-                return map(consultantRepository.save(c));
-        }
-
-        // ============================================================
-        // RESUMEN DEL CONSULTOR
-        // ============================================================
         public ConsultantSummaryDto getSummary(Long id) {
 
                 long services = consultantServiceRepository.findByConsultantId(id).size();
@@ -61,6 +37,7 @@ public class ConsultantAppService {
 
                 long active = cases.stream().filter(r -> "IN_PROGRESS".equals(r.getStatus())).count();
                 long served = cases.stream().filter(r -> "COMPLETED".equals(r.getStatus())).count();
+
                 double rating = consultantRepository.findById(id)
                                 .map(Consultant::getRating)
                                 .orElse(4.5);
@@ -73,123 +50,29 @@ public class ConsultantAppService {
                                 .build();
         }
 
-        // ============================================================
-        // SERVICIOS POR CONSULTOR
-        // ============================================================
+        public List<ConsultantServiceDto> byConsultant(Long id) {
+                return getServices(id);
+        }
+
         public List<ConsultantServiceDto> getServices(Long consultantId) {
                 return consultantServiceRepository.findByConsultantId(consultantId)
                                 .stream()
-                                .map(this::mapService)
-                                .collect(Collectors.toList());
+                                .map(s -> new ConsultantServiceDto(
+                                                s.getId(),
+                                                s.getConsultant().getId(),
+                                                s.getTitle(),
+                                                s.getDescription(),
+                                                s.getPrice()))
+                                .toList();
         }
 
-        public ConsultantServiceDto createService(ConsultantServiceDto dto) {
-                Consultant c = consultantRepository.findById(dto.getConsultantId())
-                                .orElseThrow(() -> new RuntimeException("Consultor no encontrado"));
-
-                ConsultantServiceEntity s = ConsultantServiceEntity.builder()
-                                .title(dto.getTitle())
-                                .description(dto.getDescription())
-                                .price(dto.getPrice())
-                                .consultant(c)
-                                .build();
-
-                return mapService(consultantServiceRepository.save(s));
-        }
-
-        public ConsultantServiceDto updateService(Long id, ConsultantServiceDto dto) {
-                ConsultantServiceEntity s = consultantServiceRepository.findById(id)
-                                .orElseThrow(() -> new RuntimeException("Servicio no encontrado"));
-
-                s.setTitle(dto.getTitle());
-                s.setDescription(dto.getDescription());
-                s.setPrice(dto.getPrice());
-
-                return mapService(consultantServiceRepository.save(s));
-        }
-
-        public void deleteService(Long id) {
-                consultantServiceRepository.deleteById(id);
-        }
-
-        // ============================================================
-        // CASOS / SOLICITUDES
-        // ============================================================
-        public List<ConsultantRequest> cases(Long consultantId) {
-                return requestRepo.findByConsultantId(consultantId);
-        }
-
-        public void updateCaseStatus(Long id, String status) {
-                ConsultantRequest r = requestRepo.findById(id)
-                                .orElseThrow(() -> new RuntimeException("Caso no encontrado"));
-
-                r.setStatus(status);
-                requestRepo.save(r);
-        }
-
-        // ============================================================
-        // MÉTRICAS
-        // ============================================================
-        public Map<String, Object> metrics(Long id) {
-                List<ConsultantRequest> list = requestRepo.findByConsultantId(id);
-
-                long sessions = list.stream()
-                                .filter(r -> "COMPLETED".equals(r.getStatus()))
-                                .count();
-
-                double revenue = consultantServiceRepository.findByConsultantId(id)
-                                .stream()
-                                .mapToDouble(ConsultantServiceEntity::getPrice)
-                                .sum();
-
-                double avgRating = consultantRepository.findById(id)
-                                .map(Consultant::getRating)
-                                .orElse(4.5);
-
-                double compliance = list.isEmpty() ? 0 : (sessions * 100.0 / list.size());
-
-                return Map.of(
-                                "sessions", sessions,
-                                "revenue", revenue,
-                                "avgRating", avgRating,
-                                "compliance", Math.round(compliance * 100.0) / 100.0);
-        }
-
-        // ============================================================
-        // BUSCAR CONSULTOR POR ID
-        // ============================================================
-        public Consultant findConsultantById(Long id) {
-                return consultantRepository.findById(id)
-                                .orElseThrow(() -> new RuntimeException("Consultant not found"));
-        }
-
-        // ============================================================
-        // LISTA GENERAL DE CONSULTANTS
-        // ============================================================
         public List<ConsultantDto> findAll() {
                 return consultantRepository.findAll()
                                 .stream()
-                                .map(this::toDto)
+                                .map(this::map)
                                 .toList();
         }
 
-        // ============================================================
-        // ❗❗ NUEVO: CONSULTANTS POR USUARIO (lo pide tu FRONTEND)
-        // ============================================================
-        public List<ConsultantDto> findAllByUser(Long userId) {
-
-                // Si en el futuro quieres filtrar consultores según el usuario,
-                // aquí puedes aplicar tu lógica de negocio.
-
-                return consultantRepository.findAll()
-                                .stream()
-                                .map(this::toDto)
-                                .toList();
-        }
-
-        // ============================================================
-        // MAPEO
-        // ============================================================
         private ConsultantDto map(Consultant c) {
                 return ConsultantDto.builder()
                                 .id(c.getId())
@@ -200,28 +83,6 @@ public class ConsultantAppService {
                                 .profileImage(c.getProfileImage())
                                 .rating(c.getRating())
                                 .hourlyRate(c.getHourlyRate())
-                                .build();
-        }
-
-        private ConsultantDto toDto(Consultant c) {
-                return ConsultantDto.builder()
-                                .id(c.getId())
-                                .fullName(c.getFullName())
-                                .specialty(c.getSpecialty())
-                                .description(c.getDescription())
-                                .rating(c.getRating())
-                                .hourlyRate(c.getHourlyRate())
-                                .profileImage(c.getProfileImage())
-                                .build();
-        }
-
-        private ConsultantServiceDto mapService(ConsultantServiceEntity s) {
-                return ConsultantServiceDto.builder()
-                                .id(s.getId())
-                                .title(s.getTitle())
-                                .description(s.getDescription())
-                                .price(s.getPrice())
-                                .consultantId(s.getConsultant().getId())
                                 .build();
         }
 }
